// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language Select should allow the user to change locale 1`] = `
.c1 {
  color: #24292f;
  background-color: #f6f8fa;
  border: 1px solid #d0d7de;
  border-radius: 4px;
  padding: 4px 8px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  max-width: 100%;
  padding-right: 24px !important;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTYiIHZpZXdCb3g9IjAgMCAxNiAxNiIgZmlsbD0iIzZlNzY4MSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNNC40MjcgOS40MjdsMy4zOTYgMy4zOTZhLjI1MS4yNTEgMCAwMC4zNTQgMGwzLjM5Ni0zLjM5NkEuMjUuMjUgMCAwMDExLjM5NiA5SDQuNjA0YS4yNS4yNSAwIDAwLS4xNzcuNDI3ek00LjQyMyA2LjQ3TDcuODIgMy4wNzJhLjI1LjI1IDAgMDEuMzU0IDBMMTEuNTcgNi40N2EuMjUuMjUgMCAwMS0uMTc3LjQyN0g0LjZhLjI1LjI1IDAgMDEtLjE3Ny0uNDI3eiIgLz48L3N2Zz4=");
  background-position: right 4px center;
  background-repeat: no-repeat;
}

.c0 {
  padding: 2px;
}

.c0 > select {
  padding: 5px 12px;
  min-width: 100px;
}

<div
  class="c0"
>
  <select
    aria-label="Language Select"
    class="c1"
    name="Language Select"
  >
    <option
      value="en"
    >
      Anglaise
    </option>
    <option
      aria-selected="true"
      value="fr"
    >
      Français
    </option>
  </select>
</div>
`;

exports[`Language Select should render snapshot 1`] = `
.c1 {
  color: #24292f;
  background-color: #f6f8fa;
  border: 1px solid #d0d7de;
  border-radius: 4px;
  padding: 4px 8px;
}

.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  max-width: 100%;
  padding-right: 24px !important;
  background-image: url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTYiIGhlaWdodD0iMTYiIHZpZXdCb3g9IjAgMCAxNiAxNiIgZmlsbD0iIzZlNzY4MSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj48cGF0aCBkPSJNNC40MjcgOS40MjdsMy4zOTYgMy4zOTZhLjI1MS4yNTEgMCAwMC4zNTQgMGwzLjM5Ni0zLjM5NkEuMjUuMjUgMCAwMDExLjM5NiA5SDQuNjA0YS4yNS4yNSAwIDAwLS4xNzcuNDI3ek00LjQyMyA2LjQ3TDcuODIgMy4wNzJhLjI1LjI1IDAgMDEuMzU0IDBMMTEuNTcgNi40N2EuMjUuMjUgMCAwMS0uMTc3LjQyN0g0LjZhLjI1LjI1IDAgMDEtLjE3Ny0uNDI3eiIgLz48L3N2Zz4=");
  background-position: right 4px center;
  background-repeat: no-repeat;
}

.c0 {
  padding: 2px;
}

.c0 > select {
  padding: 5px 12px;
  min-width: 100px;
}

<div
  class="c0"
>
  <select
    aria-label="Language Select"
    class="c1"
    name="Language Select"
  >
    <option
      aria-selected="true"
      value="en"
    >
      English
    </option>
    <option
      value="fr"
    >
      French
    </option>
  </select>
</div>
`;
